--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -209,15 +209,15 @@
         </div>
         <!-- 全局提示 -->
         <div class="info-tip all-tip animated slideInDown faster">
-        	<img src="../imgs/index/info.png"/>
+        	<img src="${BASE_PATH }static/credit/imgs/index/info.png"/>
             <span class="info-text">获取数据失败</span>
         </div>
         <div class="success-tip all-tip animated slideInDown faster">
-            <img src="../imgs/index/success.png"/>
+            <img src="${BASE_PATH }static/credit/imgs/index/success.png"/>
             <span class="success-text">获取数据失败</span>
         </div>
         <div class="error-tip all-tip animated slideInDown faster">
-            <img src="../imgs/index/error.png"/>
+            <img src="${BASE_PATH }static/credit/imgs/index/error.png"/>
             <span class="error-text">获取数据失败</span>
         </div>
 </div>        
