--- a/src/main/webapp/pages/credit/usercenter/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_detail.html
@@ -536,7 +536,7 @@
 
                 </div>
              <!--质检意见-->
-                <div class="bg-f company-info mt-4">
+                <div class="bg-f company-info mt-4 mb-4">
                     <a name="operate_log"> </a>
                     <div class="l-title">
                         质检意见
