--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -36,7 +36,7 @@
                     <i class="fa fa-user-o"></i>
                     <span>${user.realname}</span>
                 </div>
-                <div class="logout animated fadeInDown">
+                <div onclick="location='${BASE_PATH }credit/front/usercenter/logout'" class="logout animated fadeInDown">
                         <div class="popover-arrow"></div>
                         <i class="fa fa-power-off"></i>注销登录
                  </div>
