--- a/src/main/webapp/pages/credit/uploadfile/file_list.html
+++ b/src/main/webapp/pages/credit/uploadfile/file_list.html
@@ -20,7 +20,7 @@
 			},
 			view : function(id) {
 				var url = 'credit/file/view/'+id;
-				var title = '查看图片';
+				var title = '查看文件';
 				Iframe(url, this.width, this.height, title, false, false, false, EmptyFunc);
 			},
 			add : function() {
