--- a/src/main/webapp/pages/admin/ordermanager/order_edit.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_edit.html
@@ -3,7 +3,7 @@
 <% var language = tempDict.getSysDictDetailString('language',model.report_language); %>
 <% var orderspeed = tempDict.getSysDictDetailString('orderspeed',model.speed); %>
 <% var custom = custom.getCustomStringObject(model.custom_id); %>
-<% var reportType = reportType.getReportTypeString("ordertype"); %>
+<% var reportType = reportType.getReportTypeString(model.report_type); %>
 <% var company = company.getCompanyStringObject(model.company_id); %>
 
 <%
