--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_verify.html
@@ -7,6 +7,7 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_verify.css">
     <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
 </head>
