--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -6,7 +6,6 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_filing.css">
     <script src="${BASE_PATH }static/credit/js/order_manage/jquery.form.min.js"></script>
 </head>
@@ -27,7 +26,7 @@
                     <p class="main-title">订单查档</p>                 
                 </div>
                 <!-- 表格 -->
-                <div class="table-content p-3">
+                <div class="table-content">
                     <div class="bg-f pt-4">
                         <table id="table"
                             data-toggle="table"
