--- a/src/main/webapp/pages/credit/agentmanager/agent_view.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_view.html
@@ -10,34 +10,42 @@ var bodyContent = {
 	<!-- 数据列表 -->
 		<table class="table">
 		<tr>
-				<td>代理编码</td>
-				<td>${model.agent_id}</td>
-			</tr>
+			<td>代理编码</td>
+			<td>${model.agent_id}</td>
+		</tr>
 		<tr>
 			<td>代理类型</td>
 			<td>${model.agentType}</td>
-			</tr>
-			<tr>
+		</tr>
+		<tr>
 			<td>代理名称</td>
-			 <td> ${model.agent_name}</td>
+			<td> ${model.agent_name}</td>
 		</tr>
 		<tr>
 			<td>邮政编码</td>
 			<td>${model.postal_code}</td>
 		</tr>
 		<tr>
-			<td>备忘录</td>
+			<td>代理用时</td>
+			<td>${model.proxy_time}</td>
+		</tr>
+		<tr>
+			<td>邮箱</td>
 			<td>${model.memo}</td>
 		</tr>
-			<tr>
+		<tr>
 			<td>价格</td>
 			<td>${model.price}</td>
 		</tr>
-			<tr>
+		<tr>
 			<td>币种</td>
 			<td>${model.Currency}</td>
 		</tr>
-			<tr>
+		<tr>
+			<td>速度</td>
+			<td>${model.Speed}</td>
+		</tr>
+		<tr>
 			<td>是否禁用</td>
 			<td>${model.Usabled}</td>
 		</tr>
