--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_submit.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_submit.html
@@ -219,6 +219,7 @@
                             <span id="confirm_reason">对于只使用浏览、电子邮件等系统自带的网络应用程序，Windows防火墙根本不会产生影响。也就是说，用Internet Explorer、OutlookExpress等系统自带的程序进行网络连接，防火墙是默认不干预的。</span>
                         </div>
                     </div>
+                    <input type="hidden" id="orderId" value="-5555">
                 </div>
                 <div class="file-upload">
                     <div class="row mt-3 mb-2">
@@ -228,7 +229,7 @@
                         </div>
                         <div class="input-group col-md-6 align-items-top">
                             <label class="control-label">抄送人邮箱：</label>
-                            <textarea name="mail_associate_recipient"  cols="30" rows="10" class="form-control"></textarea>
+                            <textarea id="mail_associate_recipient" name=""  cols="30" rows="10" class="form-control"></textarea>
                         </div>
                     </div>
                 </div>
