--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -170,8 +170,8 @@
 		    			<div class="form-group row d-flex mb-4 file-upload-box">
 							<div class="file-upload">
 								<label class=" ml-3">上传附件：</label>
-								<div class="uploadFile mr-3">
-									<input type="file" name="" id="upload_file" value="" class="file-input" />
+								<div class="uploadFile mr-3 mt-3">
+									<input type="file" name="file_url" id="upload_file" value="" class="file-input" />
 									<div class="over-box">
 										<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABxSURBVGhD7c9BCsAwCABB//82/9RcPJRibg1rYAe8BCRuSDojM5/31PM9DKAZQDOAZgDNAJoBNANoBtCwgO/H06bO3OuWJk2dudctTZo6c69bmjR15nnYx38xgGYAzQCaATQDaAbQDKAZQLs+QLpCxAKykAXNUf4CGwAAAABJRU5ErkJggg==">
 										<p class="mt-2">上传附件</p>
