--- a/src/main/webapp/pages/credit/usercenter/passward_change.html
+++ b/src/main/webapp/pages/credit/usercenter/passward_change.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     
-    <link rel="stylesheet" href="../css/passward_change.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/css/passward_change.css">
 
 </head>
 
@@ -155,6 +155,6 @@
         </div>
     </div>
  
-<script src="../js/passward_change.js"></script>
+<script src="${BASE_PATH }static/credit/js/passward_change.js"></script>
 
 </html>
