--- a/src/main/webapp/pages/admin/ordermanager/order_edit.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_edit.html
@@ -2,7 +2,7 @@
 <% var ordertype = tempDict.getSysDictDetailString('ordertype',model.order_type); %>
 <% var language = tempDict.getSysDictDetailString('language',model.report_language); %>
 <% var orderspeed = tempDict.getSysDictDetailString('orderspeed',model.speed); %>
-<% var custom = custom.getCustomStringObject(model.custom_id); %>
+<% var custom = custom.getCustomStringObject1(model.custom_id); %>
 <% var reportType = reportType.getReportTypeString(model.report_type); %>
 <% var company = company.getCompanyStringObject(model.company_id); %>
 
