--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -276,7 +276,7 @@
    	 		//查询用时
    	    	usetime();
    	    	//查询语言
-   	    	languagechange()
+   	    	//languagechange()
    	    	price()
    	 	}
    	 	
