--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -284,7 +284,7 @@
    	 		usetime();
    	 		price()
    	 	}
-   	 	function languagechange(){
+   	 	/* function languagechange(){
    	 	var value1=  $("select[name='attr.country']").find("option:selected").attr("m-type");
     	var value3=$("select[name='attr.report_type']").find("option:selected").val();
    	 	var html="";
@@ -302,7 +302,7 @@
 		        	$("select[name='attr.report_language']").html(html);
 		          }
 		    });
-    	}
+    	} */
 
    	 	function usetime(){
    	 	var value1=$("select[name='attr.country']").find("option:selected").attr("m-type");
