信息录入页面展示

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -7,8 +7,8 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="../css/order_manage/order_verify.css">
-    <link rel="stylesheet" href="../css/order_manage/order_submit.css">
+    <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_verify.css">
+    <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_submit.css">
 </head>
 
 <div id="container" class="row  animated fadeIn">
@@ -143,7 +143,7 @@
     </div>
 </div>
 
-<script src="../js/report_js/report_info-import.js"></script>
+<script src="${BASE_PATH}static/credit/js/report_js/report_info-import.js"></script>
 
 
 </html>
