--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <% var orderstatus = tempDict.getListSysDictDetail('orderstate'); %>
+<% var agent = agent.getAgentString(); %>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -76,7 +77,7 @@
                                     <div class="input-group mt-2 col-md-4" id="proxy">
                                         <label class="control-label col-md-4" for="txt_search_statu">代理：</label>
                                         <select class=" search-input col-md-8 layui-input" >
-                                            <option value="" disabled selected>请选择代理</option>
+                                            ${agent!}
                                               
                                         </select>
                                     </div>
