--- a/src/main/webapp/pages/credit/usercenter/passward_change.html
+++ b/src/main/webapp/pages/credit/usercenter/passward_change.html
@@ -116,7 +116,7 @@
                                     <div class="form-group row step_top">
                                         <label class="col-sm-3 col-form-label text-right" for="securityCode">验证码：</label>
                                         <div class="col-sm-7">
-                                            <input type="email" class="form-control" id="securityCode" placeholder="请输入验证码">
+                                            <input type="text" class="form-control" id="securityCode" placeholder="请输入验证码">
                                         </div>
                                     </div>
                                     <button class="btn btn-primary d-block m-auto btn-lg mt-3" type="submit">下一步</button>
@@ -145,7 +145,7 @@
                             <div style="display: none" class="success">
                                 <div class="text-center"><i class="fa fa-check"></i></div>
                                 <div class="text text-center step_top">修改成功</div>
-                                <button class="btn btn-primary d-block m-auto btn-lg" type="submit">完成</button>
+                                <button class="btn btn-primary d-block m-auto btn-lg" type="submit" onclick="location='/credit/front/usercenter/logout'">完成</button>
                             </div>
                         </div>
                     </div>
