--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -209,7 +209,7 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">
                     <span>订单号：</span>
-                    <span>0001288784932</span>
+                    <span id="orderNum1">0001288784932</span>
                 </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -384,7 +384,7 @@
                         <div class="input-group col-md-12 align-items-top">
                             <label class="control-label">更新原因：</label>
                             <!--<input type="text" class="form-control">-->
-                            <textarea name="update_reason" id="" cols="50" rows="10"></textarea>
+                            <textarea name="update_reason" id="update_reason" cols="50" rows="10"></textarea>
                         </div>
                     </div>
                     <label class="mt-3 ml-3">上传附件：</label>
