--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -76,7 +76,7 @@
                                     </div>
                                     <div class="input-group mt-2 col-md-4" id="proxy">
                                         <label class="control-label col-md-4" for="txt_search_statu">代理：</label>
-                                        <select class=" search-input col-md-8 layui-input"  id="">
+                                        <select class=" search-input col-md-8 layui-input"  id="agentId">
                                             ${agent!}
                                               
                                         </select>
