--- a/src/main/webapp/pages/credit/usercenter/passward_change.html
+++ b/src/main/webapp/pages/credit/usercenter/passward_change.html
@@ -110,7 +110,7 @@
                                     </div>
                                     <div class="form-group row security_code">
                                         <div class="offset-md-3 col-sm-4">
-                                            <button class="btn btn-primary" id="btn_getCode">获取验证码</button>
+                                            <input type="button" id="btn_getCode" class="btn btn-primary" value="获取验证码"/>
                                         </div>
                                     </div>
                                     <div class="form-group row step_top">
@@ -156,5 +156,28 @@
     </div>
  
 <script src="${BASE_PATH }static/credit/js/passward_change.js"></script>
+<script>
+    var countdown=60;
+    function sendemail(){
+        var obj = $("#btn_getCode");
+        settime(obj);
 
+    }
+    function settime(obj) { //发送验证码倒计时
+        if (countdown == 0) {
+            obj.attr('disabled',false);
+            //obj.removeattr("disabled");
+            obj.val("获取验证码");
+            countdown = 60;
+            return;
+        } else {
+            obj.attr('disabled',true);
+            obj.val("重新发送(" + countdown + ")");
+            countdown--;
+        }
+        setTimeout(function() {
+                settime(obj) }
+            ,1000)
+    }
+</script>
 </html>
