--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -50,6 +50,7 @@
              
                 <!-- 菜单 -->
                 <div class="left-nav">
+                	<% if(menu[0].~size > 0) { %>
                     <ul>
                      <% for(item in menu[0]) { %>
                      	<% if(menu[item.id].~size > 0) { %>
@@ -129,6 +130,7 @@
 				<%}%>
 			<% } %>
 		<% } %>
+		<%}%>
 <!--                         <li class="active">
                             <a class="menu1" href="#">
                                 <i class="fa fa-home fa-fw"></i>
