--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -182,7 +182,7 @@
 		    			<div class="form-group row d-flex justify-content-around">
 		                    <div class="right-btn btn-group d-flex align-items-center justify-content-around mr-4 myBtn">
 		                    	<button type="button" id="btn_submit" class="btn btn-primary btn-submit">提交</button>
-		                    	<button type="button" id="btn_save" class="btn btn-light btn-save">保存</button>
+		                    	<!-- <button type="button" id="btn_save" class="btn btn-light btn-save">保存</button> -->
 		                    </div>
 		                </div>
 		    			<input name="attr.create_by" type="hidden" value="${user.userid}">
