--- a/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/reported_basic_info.html
@@ -1,5 +1,5 @@
 <% var companyType = tempDict.getSysDictDetailString2('companyType','319'); %>
-1<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -21,28 +21,29 @@
                             <li class="breadcrumb-item active" aria-current="page">填报</li>
                         </ol>
                     </nav>
+                    	
                     <div class="order-box">
-                        <div class="order-num main-title">订单号：<span>0001288784932</span></div>
+                        <div class="order-num main-title">订单号：<span id="num">0001288784932</span></div>
                         <div class="order-item-box d-flex flex-wrap justify-content-start row pr-4">
                             <div class="order-item col-md-4">
-                                <span class="fw">订单公司名称：</span>
-                                <span>北京小米科技有限公司</span>
+                                <span class="fw"  >订单公司名称：</span>
+                                <span id="companyNames">北京小米科技有限公司</span>
                             </div>
                             <div class="order-item col-md-4">
                                 <span class="fw">公司中文名称：</span>
-                                <span>北京小米科技有限公司</span>
+                                <span id="companyZHNames">北京小米科技有限公司</span>
                             </div> 
                             <div class="order-item col-md-4">
                                 <span class="fw">报告类型：</span>
-                                <span>基本信用报告</span>
+                                <span id="reportType">基本信用报告</span>
                             </div>
                             <div class="order-item col-md-4 mt-3">
                                 <span class="fw">接单日期：</span>
-                                <span>2018-09-06</span>
+                                <span id="receiver_date">2018-09-06</span>
                             </div>
                             <div class="order-item col-md-4 mt-3">
-                                <span class="fw">到期日期：</span>
-                                <span>2018-09-15</span>
+                                <span class="fw" id="end_date">到期日期：</span>
+                                <span id="end_date">2018-09-15</span>
                             </div>
                         </div>
                        
@@ -188,7 +189,7 @@
                             <div class="this-items col-md-2 d-flex flex-column justify-content-center align-items-center my-5">
 
                                 <div class="uploadFile">
-                                    <img src="${BASE_PATH }static/credit/${BASE_PATH }static/credit/imgs/order/！.png"/>
+                                    <img src="${BASE_PATH }static/credit/imgs/order/fujian.png"/>
                                     <p class="mt-2">暂无附件</p>
                                 </div>
                                 <div class="order-yulan mt-3"><a href="#">预览</a></div>
