--- a/src/main/webapp/pages/admin/ordermanager/order_list.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_list.html
@@ -158,8 +158,8 @@ var bodyContent = {
 			<th name="s.username" class="sorting">创建者</th>
 <!-- 			<th name="orderspeed" class="sorting">来单公司名称</th>
 			<th name="orderspeed" class="sorting">来单公司英文名称</th> -->
-			<th name="c2.name" class="sorting">公司名称</th>
-			<th name="c2.name_en" class="sorting">公司英文名称</th>
+			<th name="c2.name" class="sorting">公司中文名称</th>
+			<th name="c2.name_en" class="sorting">订单公司名称</th>
 			<th name="t.receiver_date" class="sorting">接单日期</th>
 			<th name="t.end_date" class="sorting">完成日期</th>
 			<th name="t.update_date" class="sorting">实际完成日期</th> 
