--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -132,39 +132,39 @@
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">客户参考号：</label>
-		                        <input type="text" class="form-control  col-md-8" id="client_referenceNumber" placeholder="请输入客户参考号">
+		                        <input name="attr.reference_num" type="text" class="form-control  col-md-8" id="client_referenceNumber" placeholder="请输入客户参考号">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-3">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">地址：</label>
-		                        <input type="text" class="form-control  col-md-8" id="client_address" placeholder="请输入地址">
+		                        <input name="attr.address" type="text" class="form-control  col-md-8" id="client_address" placeholder="请输入地址">
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">电话：</label>
-		                        <input type="text" class="form-control  col-md-8" id="client_telephone" placeholder="请输入电话">
+		                        <input name="attr.telphone" type="text" class="form-control  col-md-8" id="client_telephone" placeholder="请输入电话">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-3">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">传真：</label>
-		                        <input type="text" class="form-control  col-md-8" id="client_fax" placeholder="请输入传真">
+		                        <input name="attr.fax" type="text" class="form-control  col-md-8" id="client_fax" placeholder="请输入传真">
 		                    </div>
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">联系人：</label>
-		                        <input type="text" class="form-control  col-md-8" id="client_contact" placeholder="请输入联系人">
+		                        <input name="attr.contacts" type="text" class="form-control  col-md-8" id="client_contact" placeholder="请输入联系人">
 		                    </div>
 		                </div>
 		    			<div class="form-group row d-flex justify-content-around mb-4">
 		                    <div class="input-group mt-2 col-md-6">
 		                        <label class="control-label col-md-4" for="">Email：</label>
-		                        <input type="text" class="form-control search-input col-md-8" id="client_email" onblur="Events.emailAdd(this)" placeholder="请输入邮箱地址">
+		                        <input name="attr.email" type="text" class="form-control search-input col-md-8" id="client_email" onblur="Events.emailAdd(this)" placeholder="请输入邮箱地址">
 		                    	<p class="errorInfo col-md-8">请输入正确格式</p>
 		                    </div>
 
 							<div class="input-group mt-2 col-md-6">
 								<label class="control-label col-md-4" for="">备注：</label>
-								<textarea class="form-control search-input  col-md-8"  name="" rows="1" cols="" placeholder="请输入其他细节"></textarea>
+								<textarea name="attr.remarks" class="form-control search-input  col-md-8"  name="" rows="1" cols="" placeholder="请输入其他细节"></textarea>
 							</div>
 		                </div>
 		    			<div class="form-group row d-flex mb-4 file-upload-box">
