--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -93,7 +93,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <span>报告用时：</span>
-                                        <span>${order.use_time}</span>
+                                        <span>${order.useTime}</span>
                                     </div>
                                     <div class="col-md-4">
                                         <span>订单公司名称：</span>
