--- a/src/main/webapp/pages/credit/agentmanager/agent_view.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_view.html
@@ -49,6 +49,18 @@ var bodyContent = {
 			<td>是否禁用</td>
 			<td>${model.Usabled}</td>
 		</tr>
+		<tr>
+			<td>省份</td>
+			<td>${model.provinceName}</td>
+		</tr>
+		<tr>
+			<td>城市</td>
+			<td>${model.cityName}</td>
+		</tr>
+		<tr>
+			<td>代理类别</td>
+			<td>${model.agent_categoryName}</td>
+		</tr>
 		</table>
 	<div style="height: 50px;clear: both;">&nbsp;</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
