--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -181,7 +181,7 @@
                                            <span class="span_bar "></span>
                                        </div>
                                        <span>录入新订单</span>
-                                       <span>${order.create_by}</span>
+                                       <span>${order.createName}</span>
                                        <span>${order.receiver_date}</span>
                                    </li>
                                     <li>
