代理接口维护 批量导入成功后关闭回显页面

--- a/src/main/webapp/pages/credit/agentmanager/agent_list.html
+++ b/src/main/webapp/pages/credit/agentmanager/agent_list.html
@@ -86,9 +86,9 @@ var paginator = function(page) {
 				<th name="a.currency" class="sorting">币种</th>
 				<th name="a.speed" class="sorting">速度</th>
 				<th name="a.usabled" class="sorting">是否禁用</th>
-				<th name="t.province" class="sorting">省份</th>
-				<th name="t2.city" class="sorting">城市</th>
-				<th name="t3.agent_category" class="sorting">代理类别</th>
+				<th name="a.province" class="sorting">省份</th>
+				<th name="a.city" class="sorting">城市</th>
+				<th name="a.agent_category" class="sorting">代理类别</th>
 				<th>操作</th>
 			</tr>
 		</thead>
