--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -172,7 +172,7 @@
                             <div class="row mt-2 mb-2" id="div2">
                                 <div class="col-md-4">
                                     <span>地区：</span>
-                                    <span id="continent">亚洲</span>
+                                    <span id="continent">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>国家：</span>
@@ -186,7 +186,7 @@
                             <div class="row mt-2 mb-2" id="div3">
                                 <div class="col-md-4">
                                     <span>订单类型：</span>
-                                    <span id="orderType">new</span>
+                                    <span id="orderType">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告语言：</span>
@@ -210,6 +210,7 @@
                                     <span>公司中文名称：</span>
                                     <span id="companyZHNames">北京小米科技有限公司</span>
                                 </div>
+                                
                             </div>
                     </div>
                  <form class="tableValue" action="/credit/front/orderProcess/statusSaveWithFileUpLoad" class="form-inline " enctype="multipart/form-data" method="post">
@@ -240,7 +241,7 @@
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLongTitle_allocation">
                             <span>订单号：</span>
-                            <span>0001288784932</span>
+                            <span id="num2">**</span>
                         </h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
@@ -248,63 +249,64 @@
                     </div>
                     <div class="modal-body">
                         <div class="order-detail mb-5">
-                            <div class="row mt-3 mb-3">
+                        <div class="row mt-2 mb-2" id="div1"> 
                                 <div class="col-md-4">
                                     <span>客户ID：</span>
-                                    <span>001354574</span>
+                                    <span id="custom_id2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>客户用户名：</span>
-                                    <span>王彩军</span>
+                                    <span id="customId2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>接单日期：</span>
-                                    <span>2018-09-10</span>
+                                    <span id="receiver_date2">**</span>
                                 </div>
                             </div>
-                            <div class="row mt-3 mb-3">
+                            <div class="row mt-2 mb-2" id="div2">
                                 <div class="col-md-4">
                                     <span>地区：</span>
-                                    <span>亚洲</span>
+                                    <span id="continent2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>国家：</span>
-                                    <span>中国</span>
+                                    <span id="country2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告类型：</span>
-                                    <span>基本信用报告</span>
+                                    <span id="reportType2">**</span>
                                 </div>
                             </div>
-                            <div class="row mt-3 mb-3">
+                            <div class="row mt-2 mb-2" id="div3">
                                 <div class="col-md-4">
                                     <span>订单类型：</span>
-                                    <span>new</span>
+                                    <span id="orderType2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告语言：</span>
-                                    <span>中文</span>
+                                    <span id="reportLanguage2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>订单公司名称：</span>
-                                    <span>北京小米科技有限公司</span>
+                                    <span id="companyNames2">**</span>
                                 </div>
                             </div>
-                            <div class="row mt-3 mb-3">
+                            <div class="row mt-2 mb-2" id="div4">
                                 <div class="col-md-4">
-                                    <span>报告速度：</span>
-                                    <span>普通</span>
+                                    <span>报告速度</span>
+                                    <span id="speed2">**</span>
                                 </div>
                                 <div class="col-md-4">
                                     <span>报告用时：</span>
-                                    <span>5天</span>
+                                    <span id="user_time2">**</span>小时
                                 </div>
                                 <div class="col-md-4">
                                     <span>公司中文名称：</span>
-                                    <span>北京小米科技有限公司</span>
+                                    <span id="companyZHNames2">**</span>
                                 </div>
+                                 <input type="hidden" name="orderId" id="orderId2">
                             </div>
-                        </div>
+                    </div>
                         <div class="file-upload">
                             <div class="row mt-3 mb-2">
                                 <div class="input-group col-md-6 align-items-center">
@@ -319,7 +321,7 @@
                                     <select name="" id="entrust_email" class="form-control  col-md-6">
                                         <!--默认 是-->
                                         <option value="1" selected>是</option>
-                                        <option value="1">否</option>
+                                        <option value="-1">否</option>
                                     </select>
                                 </div>
                             </div>
