--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -6,7 +6,7 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="../css/order_manage/order_filing.css">
+    <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_filing.css">
 </head>
 
 <div id="container" class="row  animated fadeIn">
@@ -230,6 +230,6 @@
     </div>
 </div>
 
-<script src="../js/report_js/report_order_filing.js"></script>
+<script src="${BASE_PATH}static/credit/js/report_js/report_order_filing.js"></script>
 
 </html>
