--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_verify.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_verify.html
@@ -7,8 +7,8 @@
     <title>联信</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <link rel="stylesheet" href="../css/order_manage/order_verify.css">
-    <link rel="stylesheet" href="../css/report_css/report_common.css">
+    <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_verify.css">
+    <link rel="stylesheet" href="${BASE_PATH}static/credit/css/report_css/report_common.css">
 </head>
 
 <div id="container" class="row  animated fadeIn">
@@ -237,7 +237,7 @@
 </div>
 
 
-<script src="../js/report_js/report_order_verify.js"></script>
+<script src="${BASE_PATH}static/credit/js/report_js/report_order_verify.js"></script>
 
 
 </html>
